# minip26

./: .gitignore  .semvi.yml  README.md  action.yml  pyproject.toml
.github/workflows/: semvi-selftest.yml
frontend/: .env  package-lock.json  package.json  semvi.db
frontend/src/: App.jsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/audit/: route.ts
frontend/src/app/api/dashboard/: route.ts
frontend/src/app/api/findings/: route.ts
frontend/src/app/api/repositories/: route.ts
frontend/src/app/api/scans/: route.ts
frontend/src/app/api/settings/: route.ts
frontend/src/app/dependencies/: page.tsx
frontend/src/app/findings/: page.tsx
frontend/src/app/findings/[id]/: page.tsx
frontend/src/app/repositories/: page.tsx
frontend/src/app/repositories/[...name]/: page.tsx
frontend/src/app/scans/: page.tsx
frontend/src/app/scans/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Badges.tsx  DashboardCharts.tsx  LandingPage.jsx  Sidebar.tsx  StatCard.tsx
frontend/src/components/auth/: AuthPage.jsx  LoginForm.jsx  SignupForm.jsx
frontend/src/components/dashboard/: Dashboard.jsx  Sidebar.jsx  StatsCard.jsx  ThreatTable.jsx  TrustGaugeDash.jsx
frontend/src/lib/: dashboard.ts  db.ts  seed.ts  utils.ts
paper/: refs.bib  semvi_ieee.tex
src/semvi/: cli.py  codeowners.py  config.py  dependency.py  detectors.py  git_utils.py  models.py  notify.py  report.py
src/semvi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_semvi.py
(+3 files in other folders)
