[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semvi"
version = "0.1.0"
description = "Push-time repository security, memory exposure, and CVE scanner for GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
semvi = "semvi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
